--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul id="band" type="square">
+		<article><li>Anywhere But Here</li></article>
+		<article><li>The Bled</li></article>
+		<article><li>Counterparts</li></article>
+		<article><li>The Devil Wears Prada</li></article>
+		<article><li>The Midway State</li></article>
+		<article><li>Norma Jean</li></article>
+		<article><li>Oh, Sleeper</li></article>
+		<article><li>An Old Dog</li></article>
+		<article><li>Pierce the Veil</li></article>
+		<article><li>The Plot in You</li></article>
+		<article><li>Say Anything</li></article>
+		<article><li>Skylit Drive</li></article>
+		<article><li>We Came as Romans</li></article>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
